<resources>
    <string name="app_name">TeploApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_scanner">ScannerActivity</string>
    <string name="toggle_flash">use flash</string>
    <string name="start_time_is_0">Start time is %1$s</string>
    <string name="hint_stop_check">stop check</string>
    <string name="hint_stop_time">stop time</string>
    <string name="new_visitor_title">New Visitor</string>
    <string name="visitor_one_btn_title">Visitor One</string>
    <string name="visitor_two_btn_title">Visitor two</string>
    <string name="visitor_three_btn_title">Visitor Three</string>
    <string name="visitor_four_btn_title">Visitor Four</string>
    <string name="visitor_five_btn_title">Visitor Five</string>
    <string name="use_mocked_scanner">mocked scanner</string>
    <string name="total">Total:</string>
    <string name="back">back</string>
</resources>
