<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/normal_margin_padding">

    <TextView
        android:id="@+id/visitor_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_padding"
        android:textSize="@dimen/big_text_size" />

    <TextView
        android:id="@+id/visitor_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/visitor_name"
        android:layout_margin="@dimen/small_padding"
        android:textSize="@dimen/medium_text_size" />


    <TextView
        android:id="@+id/start_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/visitor_id"
        android:layout_margin="@dimen/small_padding"
        android:text="@string/start_time_is_0"
        android:textColor="@android:color/black" />

    <CheckBox
        android:id="@+id/stop_check_enabled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_time"
        android:layout_margin="@dimen/small_padding"
        android:text="@string/hint_stop_check"
        android:textSize="@dimen/medium_text_size" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_stop_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/stop_check_enabled"
        android:visibility="gone">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/stop_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_stop_check"
            android:inputType="number"
            android:textSize="@dimen/medium_text_size" />

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/stop_time_enabled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout_stop_check"
        android:padding="@dimen/small_padding"
        android:text="@string/hint_stop_time"
        android:textSize="@dimen/medium_text_size" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_stop_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/stop_time_enabled"
        android:visibility="gone">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/stop_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_stop_time"
            android:inputType="time"
            android:textSize="@dimen/medium_text_size" />

    </android.support.design.widget.TextInputLayout>

    <include
        layout="@layout/bottom_button_bar_back_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
