<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/tools"
    android:id="@+id/view_fragment_dialog_root_dim"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/dialog_color_dim"
    android:padding="@dimen/activity_horizontal_margin">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="35dp"
        android:layout_marginLeft="@dimen/normal_margin_padding"
        android:layout_marginRight="@dimen/normal_margin_padding"
        android:clickable="true"
        android:descendantFocusability="blocksDescendants"
        cardView:cardBackgroundColor="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?android:listDivider"
            android:dividerPadding="2.5dp"
            android:orientation="vertical"
            android:padding="@dimen/normal_margin_padding"
            android:showDividers="middle">

            <include layout="@layout/view_fragment_dialog_top" />

            <include layout="@layout/view_fragment_dialog_title_subtitle" />

            <TextView
                android:id="@+id/visitor_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_padding"
                android:text="visitor name"
                android:textSize="@dimen/dig_text_size" />

            <TextView
                android:id="@+id/visitor_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_padding"
                android:text="visitor id"
                android:textSize="@dimen/medium_text_size" />

            <TextView
                android:id="@+id/start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_padding"
                android:text="@string/start_time_is_0"
                android:textColor="@android:color/black" />

            <CheckBox
                android:id="@+id/stop_check_enabled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_padding"
                android:text="@string/hint_stop_check"
                android:textSize="@dimen/medium_text_size" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_stop_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <EditText
                    android:id="@+id/stop_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_stop_check"
                    android:inputType="number"
                    android:textSize="@dimen/medium_text_size" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/stop_time_enabled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_padding"
                android:text="@string/hint_stop_time"
                android:textSize="@dimen/medium_text_size" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_stop_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <EditText
                    android:id="@+id/stop_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_stop_time"
                    android:inputType="time"
                    android:textSize="@dimen/medium_text_size" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>